# ucrc

./: CMakeLists.txt  LICENSE.md
include/ucrc/: ucrc.h  ucrc_crc8.h  ucrc_settings_crc8.h
src/: ucrc.c  ucrc_crc8.c  ucrc_settings_crc8.c
tests/: CMakeLists.txt  main.c
